--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,8 @@
 ---
 import MainHead from './MainHead.astro'
 
+import '../styles/global.css'
+
 const { title = "My Astro Blog", description = "My musings about the Astro framework" }= Astro.props
 ---
 
