--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,7 @@
 ---
 import MainHead from './MainHead.astro'
+import Nav from '../components/Nav.astro'
+import Footer from '../components/Footer.astro'
 
 import '../styles/global.css'
 
@@ -9,8 +11,10 @@ const { title = "My Astro Blog", description = "My musings about the Astro frame
 <html lang="en">
   <MainHead {title} {description} />
 	<body>
+    <Nav />
 		<slot>
       Default Text
     </slot>
+    <Footer />
 	</body>
 </html>
