Format Astro files

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,9 +1,9 @@
 ---
-import { Icon } from 'astro-icon/components'
+import { Icon } from "astro-icon/components";
 
-import Link from '../components/Link.astro'
+import Link from "../components/Link.astro";
 
-import navData from '../data/navData'
+import navData from "../data/navData";
 ---
 
 <nav aria-label="Primary">
@@ -28,5 +28,5 @@ import navData from '../data/navData'
 </nav>
 
 <script>
-  import "../js/nav.js"
+  import "../js/nav.js";
 </script>
