--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,17 +1,17 @@
 ---
-import { Icon } from 'astro-icon/components'
+import { Icon } from "astro-icon/components";
 
 interface Props {
-  text: string
-  href: string
-  style: 'primary' | 'secondary'
+  text: string;
+  href: string;
+  style: "primary" | "secondary";
   icon?: {
-    name: string
-    side: 'left' | 'right'
-  }
-  isFilled?: boolean
-  borderVisible?: boolean
-  classes?: string
+    name: string;
+    side: "left" | "right";
+  };
+  isFilled?: boolean;
+  borderVisible?: boolean;
+  classes?: string;
 }
 
 const {
@@ -23,7 +23,7 @@ const {
   borderVisible = false,
   classes,
   ...rest
-} = Astro.props as Props
+} = Astro.props as Props;
 ---
 
 <a
@@ -32,12 +32,12 @@ const {
     "link",
     classes,
     style,
-    { filled: isFilled, bordered: borderVisible }
+    { filled: isFilled, bordered: borderVisible },
   ]}
   {...rest}
 >
   {
-    icon && icon.side === 'left' && (
+    icon && icon.side === "left" && (
       <Icon name={icon.name} width={24} height={24} />
     )
   }
@@ -45,7 +45,7 @@ const {
   <span>{text}</span>
 
   {
-    icon && icon.side === 'right' && (
+    icon && icon.side === "right" && (
       <Icon name={icon.name} width={24} height={24} />
     )
   }
