--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,20 +1,21 @@
 ---
-import MainHead from './MainHead.astro'
-import Nav from '../components/Nav.astro'
-import Footer from '../components/Footer.astro'
+import MainHead from "./MainHead.astro";
+import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
 
-import '../styles/global.css'
+import "../styles/global.css";
 
-const { title = "My Astro Blog", description = "My musings about the Astro framework" }= Astro.props
+const {
+  title = "My Astro Blog",
+  description = "My musings about the Astro framework",
+} = Astro.props;
 ---
 
 <html lang="en">
   <MainHead {title} {description} />
-	<body>
+  <body>
     <Nav />
-		<slot>
-      Default Text
-    </slot>
+    <slot> Default Text </slot>
     <Footer />
-	</body>
+  </body>
 </html>
