--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,30 @@
 ---
+import Link from "../components/Link.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout title="About" description="My About Page">
-  <p>Hi from About</p>
+  <section class="container about" aria-label="About Me">
+    <img
+      src="/images/headshot.jpg"
+      alt="My headhshot"
+      width="200"
+      height="330"
+    />
+    <div class="content">
+      <h1 class="h1">My Blog</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam autem
+        quaerat quos reprehenderit dolorem rerum ex neque maxime, doloremque,
+        eum veritatis eligendi voluptatem excepturi repellendus? Consequuntur
+        sit pariatur amet sequi, perspiciatis magnam? Consequuntur natus facilis
+        necessitatibus dicta laborum? Modi, et.
+      </p>
+      <Link
+        href="mailto:chris@codinginpublic.dev"
+        style="primary"
+        text="Contact Me"
+      />
+    </div>
+  </section>
 </MainLayout>
