--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,7 +2,10 @@
 import PostCard from "../../components/PostCard.astro";
 import MainLayout from "../../layouts/MainLayout.astro";
 
+import { formatBlogPosts } from "../../js/utils";
+
 const allPosts = await Astro.glob("./*.md");
+const formattedPosts = formatBlogPosts(allPosts);
 ---
 
 <MainLayout title="My Blog">
@@ -10,7 +13,7 @@ const allPosts = await Astro.glob("./*.md");
     <h1 class="h1">New Blog Posts</h1>
     <div class="post-container">
       {
-        allPosts.map((post) => (
+        formattedPosts.map((post) => (
           <PostCard
             frontmatter={post.frontmatter}
             url={post.url}
