--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,10 +1,25 @@
 ---
 import MainLayout from "./MainLayout.astro";
 import PostHeader from "../components/PostHeader.astro";
+import RelatedPosts from "../components/RelatedPosts.astro";
 import CategoryCloud from "../components/CategoryCloud.astro";
+
+import { formatBlogPosts } from "../js/utils";
 
 const { frontmatter } = Astro.props;
 const { title, description, date, category, author, image } = frontmatter;
+
+const allPosts = await Astro.glob("../pages/blog/*.md");
+const formattedPosts = formatBlogPosts(allPosts, {
+  sortByDate: false,
+});
+const relatedPosts = formattedPosts
+  .filter(
+    (post) =>
+      post.frontmatter.title !== title &&
+      post.frontmatter.category.toLowerCase() === category.toLowerCase()
+  )
+  .slice(0, 3);
 ---
 
 <MainLayout {title} {description}>
@@ -18,6 +33,14 @@ const { title, description, date, category, author, image } = frontmatter;
         <h2 class="h3">Blog Categories</h2>
         <CategoryCloud />
       </aside>
+      {
+        relatedPosts.length > 0 && (
+          <aside class="container" aria-label="Related posts">
+            <h2 class="h3">Related Posts</h2>
+            <RelatedPosts {relatedPosts} />
+          </aside>
+        )
+      }
     </div>
   </div>
 </MainLayout>
