Add support for technical SEO

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -22,7 +22,13 @@ const relatedPosts = formattedPosts
   .slice(0, 3);
 ---
 
-<MainLayout {title} {description}>
+<MainLayout
+  {title}
+  {description}
+  image={frontmatter.image}
+  {frontmatter}
+  robots={frontmatter.robots}
+>
   <PostHeader {title} {date} {category} {author} {image} />
   <div class="post-content">
     <div class="content">
