--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const formattedPosts = formatBlogPosts(allPosts, { limit: 3 });
     />
     <div class="content">
       <h1 class="h1">My Blog</h1>
-      <p>
+      <p class="italic">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam autem
         quaerat quos reprehenderit dolorem rerum ex neque maxime.
       </p>
